# advent-of-code-2020

./: README.md
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs  types.rs
day5/: Cargo.toml
day5/src/: main.rs  types.rs
day6/: Cargo.toml
day6/src/: main.rs
