[package]
name = "day4"
version = "0.1.0"
authors = ["meandmymind <beaverloverock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.3"
pretty_assertions = "0.7.1"
strum = { version = "0.20.0", features = ["derive"] }
